// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableEmpty rendering renders expected elements 1`] = `
<div
  className="Table__empty"
  id="test"
>
  Test
</div>
`;

exports[`TableEmpty rendering renders expected elements when className is set 1`] = `
<div
  className="Table__empty TestClass"
  id="test"
>
  Test
</div>
`;
